Particle simulation doesn't work after adding a texture to the particle system #52156

Closed
opened 2017-07-22 23:06:29 +02:00 by Andreas Halm · 7 comments

This is with the latest daily build (2017-07-21 a27b6ae), also happened on earlier dailys (2017-06-24 or something) not tested with older builds. Might be a regression.

As soon as you add a texture to a particle simulation, the simulation no longer works.

Steps to reproduce:

  • Create a plane, add a particle system, set it to hair
  • Enable Hair Dynamics
  • Add a Force Field (I used Wind blowing in Y direction)
  • Hit Alt-A to play, the Hair bows in Y direction as expected
  • On the particle system, add a texture, use a b/w image texture and set its influence to length+density
  • Hit Alt-A again, the Hair no longer moves

This can be worked around by baking a setting without the texture, and afterwards adding the texture back in.

I can of course upload a sample project, but this bug is so easy to reproduce that I don't think that's necessary.
I hope this problem hasn't been submitted yet, I didn't find it if it has.

This is with the latest daily build (2017-07-21 a27b6ae), also happened on earlier dailys (2017-06-24 or something) not tested with older builds. Might be a regression. As soon as you add a texture to a particle simulation, the simulation no longer works. Steps to reproduce: - Create a plane, add a particle system, set it to hair - Enable Hair Dynamics - Add a Force Field (I used Wind blowing in Y direction) - Hit Alt-A to play, the Hair bows in Y direction as expected - On the particle system, add a texture, use a b/w image texture and set its influence to length+density - Hit Alt-A again, the Hair no longer moves This can be worked around by baking a setting without the texture, and afterwards adding the texture back in. I can of course upload a sample project, but this bug is so easy to reproduce that I don't think that's necessary. I hope this problem hasn't been submitted yet, I didn't find it if it has.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @A-Halm

Added subscriber: @A-Halm

Added subscriber: @zeauro

Added subscriber: @zeauro

Yes. It is an already reported problem. Not really a bug but a known limitation.

Particles can be emitter or hair ; Influence panel in Textures tab will be the same for both types.

Settings under General label like Density are requiring physics behaviour baked for hair.
But you can use a texture for Length or settings under Hair or Physics labels with hair dynamics.

Yes. It is an already reported problem. Not really a bug but a known limitation. Particles can be emitter or hair ; Influence panel in Textures tab will be the same for both types. Settings under General label like Density are requiring physics behaviour baked for hair. But you can use a texture for Length or settings under Hair or Physics labels with hair dynamics.
Author

This might not be the right place to discuss. However, I don't really understand this:
If you have added a texture to a particle (hair) system, and you hit 'Bake', you get an 'empty bake', that is a simulation doing nothing. Ignoring all fields you have added. Without any warning or notice, that you have to remove the texture again before you can get a usable result. To be more clear, you get an 'erroneous result' without any hint why. This is considered a limitation?

As I see it, an error message describing this behavior would be the least thing to do. Even better would be to temporarily disable textures during baking and enable them again afterwards. On the other hand, I don't really understand why the baking process doesn't just ignore textures it can't handle.

This might not be the right place to discuss. However, I don't really understand this: If you have added a texture to a particle (hair) system, and you hit 'Bake', you get an 'empty bake', that is a simulation doing nothing. Ignoring all fields you have added. Without any warning or notice, that you have to remove the texture again before you can get a usable result. To be more clear, you get an 'erroneous result' without any hint why. This is considered a limitation? As I see it, an error message describing this behavior would be the least thing to do. Even better would be to temporarily disable textures during baking and enable them again afterwards. On the other hand, I don't really understand why the baking process doesn't just ignore textures it can't handle.

This issue was referenced by 9b22dbcc0d

This issue was referenced by 9b22dbcc0d05e465b7ba2fd353c48350d1a546a6
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52156
No description provided.